# Athena-Entities

./: .gitmodules  CMakeLists.txt  LICENSE  README
dependencies/: CMakeLists.txt
include/Athena-Entities/: Animation.h  AnimationsMixer.h  CMakeLists.txt  Component.h  ComponentAnimation.h  ComponentsList.h  ComponentsManager.h  Config.h.in  Entity.h  Prerequisites.h  Scene.h  ScenesManager.h  Scripting.h  Serialization.h  Signals.h  Transforms.h  tComponentID.h
scripting/: Animation.cpp  AnimationsMixer.cpp  CMakeLists.txt  Component.cpp  ComponentAnimation.cpp  ComponentID.js  ComponentsList.cpp  ComponentsManager.cpp  Entity.cpp  Scene.cpp  ScenesManager.cpp  Transforms.cpp  module.cpp
src/: Animation.cpp  AnimationsMixer.cpp  CMakeLists.txt  Component.cpp  ComponentsList.cpp  ComponentsManager.cpp  Entity.cpp  Scene.cpp  ScenesManager.cpp  Scripting.cpp  Serialization.cpp  Transforms.cpp  module.cpp.in
unittests/: CMakeLists.txt
unittests/Athena-Entities/: CMakeLists.txt  scripting.cpp  test_Animation.cpp  test_ComponentsList.cpp  test_ComponentsManager.cpp  test_Entity.cpp  test_Scene.cpp  test_ScenesManager.cpp  test_Transforms.cpp
unittests/Athena-Entities/data/: delayed_property.entity  delayed_property_in_child.entity  one_child.entity  simple.scene  single.entity  transforms_no_parent.component  transforms_with_parent.component  unknown_type.component
unittests/Athena-Entities/environments/: EntitiesTestEnvironment.h  ScriptingTestEnvironment.h
unittests/Athena-Entities/scripts/: Component_Creation.js  ComponentsList_AddComponent.js  ComponentsList_ComponentRetrieval.js  ComponentsList_Creation.js  ComponentsManager_ComponentCreation.js  ComponentsManager_ComponentDestruction.js  ComponentsManager_Retrieval.js  Entity_AnimationsMixer.js  Entity_Children.js  Entity_Components.js  Entity_Creation.js  Entity_Enabled.js  Scene_Components.js  Scene_Creation.js  Scene_Enabled.js  Scene_EntityCreation.js  Scene_EntityDestroyAll.js  Scene_EntityDestruction.js  Scene_EntityTransfer.js  Scene_Shown.js  ScenesManager_Retrieval.js  ScenesManager_SceneCreation.js  ScenesManager_SceneDestroyAll.js  ScenesManager_SceneDestruction.js  ScenesManager_SceneRetrieval.js  Transforms_LookAt.js  Transforms_Orientation.js  Transforms_Pitch.js  Transforms_Position.js  Transforms_Roll.js  Transforms_Rotate.js  Transforms_Scale.js  Transforms_SetDirection.js  Transforms_Translate.js  Transforms_Yaw.js
unittests/Athena-Entities/tests/: scripting.cpp  test_Animation.cpp  test_ComponentsList.cpp  test_ComponentsManager.cpp  test_Entity.cpp  test_Scene.cpp  test_ScenesManager.cpp  test_Transforms.cpp
